--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,14 +2,15 @@
 \usepackage{pacco}
 \addbibresource{biblio.bib}	
 \begin{document}
-	\title{Pitch Shifting}
-	\author{kotatsu}
+	\title{Pitch Shifting via phase vocoder: the role of FFT algorithm}
+	\author{Lorenzo Sala}
 	\date{}
 	\maketitle
 	\tableofcontents
 \input{intro}
 \input{fft}
 \input{phase vocoder}
+\input{conclusions}
 \listofalgorithms
 \printbibliography
 \end{document}
