--- a/tex/phase vocoder.tex
+++ b/tex/phase vocoder.tex
@@ -5,7 +5,7 @@
 \section{Pitch-shifting via phase vocoder}
 We are now ready to focus on our pitch shifting techniques. As we said in the introduction section, we will base our pitch-shifting technique in the well-established approach of the \enf{phase vocoder}.
 \subsection{A quick overview of the phase vocoder}
-Generally speaking, the term vocoder (from the union of "voice" and "encoder") refers to a class of speech coding that analyzes the information contained in an audio signal (typically speech) and applies them to perform transformations, encryption or compression. The main idea relies in encoding in an envelope signal the tract transmission and vocal excitation separately\footcite[][1]{phasevocoderog}: by means of this separation, the original signal can be discarded while its characteristic features can still be used to modulate other signals or perform operations. The reader may be familiar with the \textit{channel vocoder}, devised by Homer Dudley in 1938\footnote{ibidem} at Bell Labs: this method and its later developments found an important role in voice modification and transformation for technical and artistic purposes, so much that nowadays the channel vocoder is simply known as "vocoder": one can think about the typical "robot voice" in science fiction movies and in the music of electronic artists like Kraftwerk, Herbie Hancock and Giorgio Moroder.\\ The main idea behind this musical effect is using the different informations contained in different bands of frequency of a "carrier signal" to modulate the parameters of a synthesizers, usually the cutoff frequency of a filterbank and the relative impulse responses (the "resonance" of the filters).\par
+Generally speaking, the term vocoder (from the union of "voice" and "encoder") refers to a class of speech coding that analyzes the information contained in an audio signal (typically speech) and applies them to perform transformations, encryption or compression. The main idea relies in encoding in an envelope signal the tract transmission and vocal excitation separately\footcite[][1]{phasevocoderog}: by means of this separation, the original signal can be discarded while its characteristic features can still be used to modulate other signals or perform operations. The reader may be familiar with the \textit{channel vocoder}, devised by Homer Dudley in 1938\footnote{ibidem} at Bell Labs: this method and its later developments found an important role in voice modification and transformation for technical and artistic purposes, so much that nowadays the channel vocoder is simply known as "vocoder": one can think about the typical "robot voice" in science fiction movies and in the music of electronic artists like Kraftwerk, Herbie Hancock and Giorgio Moroder.\\ The main idea behind this musical effect is using the different information contained in different bands of frequency of a "carrier signal" to modulate the parameters of a synthesizers, usually the cutoff frequency of a filterbank and the relative impulse responses (the "resonance" of the filters).\par
 The phase vocoder was firstly implemented in a paper by Flanagan and Golden\footcite{phasevocoderog}, from Bell Labs. It is indeed a vocoder in the sense that its main functionality consists in taking an input signal, extrapolating its frequency information (amplitude and phase of the different frequency bins), then performing operations on the extrapolated information and lastly using the modified data to synthesize a new signal. The first building block for this procedure (and, really, for any audio processing in time domain) is the \enf{short-time Fourier transform (STFT)}.
 \subsection{The short-time Fourier Transform}
 The DFT creates a time-fixed frequency representation of a signal as a \textit{periodic} wave: it has no tools to interpret a variation in the frequency information over time. \\In real-life scenarios, we are often interested in analyzing a signal in light of the changes of its frequency content over time. Take into consideration an audio recording with a length of 10 seconds: if we were to feed this sequence of samples into a DFT we would obtain, for each frequency bin (that is, for each $X_n$), one information of magnitude and one information of phase, which would be very noisy and of not much use.\\ We can imagine instead to subdivide our long input signal into shorter "snapshots" taken from a moving frame and then performing a FFT on those windows: this is the core principle behind the STFT.\par
@@ -88,7 +88,7 @@ The difference between the different types of windows lies in the ways they hand
 	\caption*{Spectral leakage introduced on a sine wave from a rectangular window. The real frequency would be the solid line at $\frac{n}{T}$. From \cite{leakage}, p. 425}
 	\label{fig:sidelobez}
 \end{figure}
-The Bartlett, Hann and Hanning window produce sidelobes with lesser amplitude, but at the cost of reducing the precision with which any given frequency component can be identified. This tradeoff is described as \textit{main lobe width} versus \textit{sidelobe height}.\\Another interesting aspect of the windowing of a signal takes place in the overlap-adding stage of our procedure descripted in the diagram above.
+The Bartlett, Hann and Hanning window produce sidelobes with lesser amplitude, but at the cost of reducing the precision with which any given frequency component can be identified. This trade-off is described as \textit{main lobe width} versus \textit{sidelobe height}.\\Another interesting aspect of the windowing of a signal takes place in the overlap-adding stage of our procedure descripted in the diagram above.
  Since our signal has been windowed, we must take into account how the different windows will overlap once summed together. If the windows do not meet at an amplitude level of 0.5, the sum may exceed 1 with some amplitude modulation between the peaks. A visualization of this situation can be seen in the figure below.  We define the overlap ratio\footcite[][8]{theo} as $1-\frac{\text{hop size}}{\text{window size}}$: valid overlap ratios that preserve amplitude flatness vary from window to window (e.g. for the Hanning window the "safe" overlap ratios are $\frac{1}{2},\frac{2}{3},\frac{3}{4}$).
  % TODO: \usepackage{graphicx} required
  \begin{figure}[H]
@@ -179,7 +179,7 @@ but since $x_n$ is real and therefore has no imaginary part, we have that $(x_n)
 	&=X_{N-k}.
 \end{align*}
 
-The fact that $X_{N-k}=(X_k)^*$ has the important consequence that the real parts of $X_{N-k}$ and $X_k$ are identical, while their imaginary parts have the same maginitude but opposite signs. An interesting interpretation of this fact lies in the observations that the parts with negative imaginary part (which corresponds to a \textit{negative phase}) are \textit{negative frequencies}, that "spin" in the opposite direction of the positive frequency. 
+The fact that $X_{N-k}=(X_k)^*$ has the important consequence that the real parts of $X_{N-k}$ and $X_k$ are identical, while their imaginary parts have the same magnitude but opposite signs. An interesting interpretation of this fact lies in the observations that the parts with negative imaginary part (which corresponds to a \textit{negative phase}) are \textit{negative frequencies}, that "spin" in the opposite direction of the positive frequency. 
 
 This fact has, of course, little application in the practice of digital signal processing and this is why the negative frequencies produced by the DFT are usually ditched.  In this implementation, for speed's sake, we used the \verb*|numpy| implementation of real FFT, \verb*|np.fft.rfft|, that manages to cut out from the output the negative aliased frequencies. 
 \begin{py}
@@ -313,10 +313,10 @@ As we said in example 2.1, the unwrapped phase difference between 2 consecutive 
 \end{equation}
 This operation allows us to have information on how fast phase evolves between 2 consecutive frames.\par
 We now have everything we need to perform our spectral operations\footcite[][27]{theo}. Consider $\varphi(k,n)$, the phase of the bin at the $k$-th frequency channel of the $n$-th time frame of the analysis signal. We can compute $\Delta\varphi(k,n+1)$ from $\varphi(k,n)$ and $\varphi(k,n+1)$ and the initialize the phase of the synthesized signal for the first frame as $\varphi_s(k,0)=\varphi(k,0)$. The following synthesis phases are computed as:
-\begin{equation}\label{bitchshifting}
+\begin{equation}\label{bitchshifeting}
 	\varphi_s(k,n+1)=\varphi_s(k,n)+\Delta\varphi(k,n+1)\cdot\alpha
 \end{equation}
-By doing so we preserve the same instantaneous frequency but at the same time we increase (or decrease) the time between the two measurements by a factor of $\alpha$. We are now in control of both the frequency and the time content of each frame. If we approach this flexibility by changing phase relationships and keeping time constant we have effectively devised a \textit{pitch shifting} algorithm, while if we use Eq. \ref{bitchshifting} to change the time while keeping the phase derivative constant we have divesed a \textit{time-stretching} algorithm. \cite{theo} shows the situation in the following plot:
+By doing so we preserve the same instantaneous frequency but at the same time we increase (or decrease) the time between the two measurements by a factor of $\alpha$. We are now in control of both the frequency and the time content of each frame. If we approach this flexibility by changing phase relationships and keeping time constant we have effectively devised a \textit{pitch shifting} algorithm, while if we use Eq. \ref{bitchshiefting} to change the time while keeping the phase derivative constant we have divesed a \textit{time-stretching} algorithm[][206]\footcite{AudioEffects}. \cite{theo} shows the situation in the following plot:
 % TODO: \usepackage{graphicx} required
 \begin{figure}[H]
 	\centering
@@ -408,6 +408,6 @@ Another interesting extension of the phase vocoder is the so-called "phase vocod
 	\centering
 	\includegraphics[width=0.7\linewidth]{phasevocoderdoneright}
 	\caption*{Diagram of the "phase vocoder done right". From \cite{doneright}, p. 4}
-	\label{fig:phasevocoderdoneright}
+	\label{fig:phasevocoderdoneridght}
 \end{figure}
 \end{document}
