--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,8 +2,9 @@
 \usepackage{pacco}
 \addbibresource{biblio.bib}	
 \begin{document}
-	\title{Pitch Shifting via phase vocoder: the role of FFT algorithm}
+	\title{Fast Fourier transform and pitch shifting: the phase vocoder\\\color{black}\small Databases and Algorithms 2024}
 	\author{Lorenzo Sala}
+	\affil{Università di Torino}
 	\date{}
 	\maketitle
 	\tableofcontents
