--- a/tex/pacco.sty
+++ b/tex/pacco.sty
@@ -32,7 +32,7 @@
 \usepackage{multicol}
 \usepackage{caption}
 \usepackage{wrapfig}
-
+\usepackage{authblk}
 \usepackage[scr=rsfso,cal=zapfc,frak=euler,bb=ams]{mathalfa}
 \usepackage{sectsty,titling}
 \usepackage{float}
@@ -304,7 +304,7 @@
 								borderline={0.5mm}{0mm}{white},
 								borderline west={1mm}{0mm}{Red!45},
 								attach boxed title to top left,  
-								boxed title style={boxrule=0.5mm,drop fuzzy shadow=gray, colframe=Dandelion!24},
+								boxed title style={boxrule=0.5mm,drop fuzzy shadow=gray, colframe=red},
 								separator sign={:},
 								description formatter=\newline,
 								theorem hanging indent/.try=0pt,
